# ledetour-vouchers

./: .gitignore  MANIFEST.in  NOTES.md  README.md  TODO.txt  campains.tar.zx.gpg  dev.env  exported.csv  pyproject.toml  requirements.txt  scratch.sh  setup.py  test.sql  test_expected.txt  toimport.csv  tox.ini
app/: __init__.py  __main__.py  main.py
app/auth/sql/: init.sql
app/corecli/: __init__.py  cli.py  utils.py
app/db/: __init__.py  cli.py
app/emissions/: cli.py  models.py
app/emissions/sql/: contents_add.sql  contents_export.sql  contents_read.sql  contents_remove.sql  init.sql  list.sql  read.sql
app/events/: models.py
app/events/sql/: create.sql  history.sql  init.sql
app/serve/: __init__.py  cli.py
app/static/: index-deactivated.html  index.html
app/static/css/: app.css
app/static/js/: main.js
app/users/: __init__.py  cli.py  models.py
app/users/sql/: init.sql  list.sql  read.sql
app/utils/: __init__.py  cli.py  legacy.py  models.py  sql.py
app/vouchers/: models.py
app/vouchers/sql/: init.sql  list.sql  read.sql
demo/: users.csv  vouchers.csv
distribs/2022-11-proto/: users.csv  vouchers.csv
distribs/2023-07/: ingest.csv  ingest.sh  vouchers.csv  vouchers.ods
oldtests/: _test_emissions_cli.py  _test_main.py  _test_users_cli.py
src/ldtvouchers/: __init__.py  __main__.py  cli.py  gen.py  models.py  webapp.py
src/ldtvouchers/db/: __init__.py  action_create.sql  action_read.sql  action_read_first_with_responseid.sql  emission_create.sql  emission_delete.sql  emission_emailreport.sql  emission_htmlreport_actions.sql  emission_htmlreport_emission.sql  emission_htmlreport_vouchers.sql  emission_odsreport_actions.sql  emission_odsreport_vouchers.sql  (+16 more)
ssl/: .gitignore
static/: index.html
static/css/: app.css
static/js/: main.js
templates/: build-vouchers.ninja  build.ninja
templates/printables/: build.ninja
tests/: test_cli.py  test_db.py  test_emissions_cli.py  test_gen.py  test_import.csv  test_main.py  test_triggers.sql  test_users.py  test_users_cli.py  test_webapi.py  test_webapp.py  teststub.py  testutils.py  utils.py
(+13 files in other folders)
