[project]
name = "ldtvouchers"
dynamic = ["version"]
description = "Épicerie Le Détour vouchers"
authors = [
    {name = "Charles Flèche", email = "charles.fleche@free.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Web Environment"
]
dependencies = [
    "cairosvg",
    "fastapi",
    "jinja2",
    "pypdf",
    "qrcode"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools_scm[toml]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.paths]
source = [
    "src/ldtvouchers",
    "*/.tox/*/lib/python*/site-packages/ldtvouchers"
]
